--- a/crates/www/layouts/footer.css
+++ b/crates/www/layouts/footer.css
@@ -8,7 +8,7 @@
 	margin: 0 auto;
 	display: grid;
 	gap: 2rem;
-	padding: 1rem 2rem;
+	padding: 2rem;
 }
 
 .footer-sections {
