--- a/crates/www/pages/index/server/page.css
+++ b/crates/www/pages/index/server/page.css
@@ -9,14 +9,14 @@
 @media (max-width: 1199px) {
 	.index-grid {
 		row-gap: 2rem;
-		padding: 1rem;
+		padding: 2rem;
 	}
 }
 
 @media (min-width: 1200px) {
 	.index-grid {
-		row-gap: 4rem;
-		padding: 4rem 2rem;
+		row-gap: 2rem;
+		padding: 2rem;
 	}
 }
 
